# image-converter

./: .gitignore  build.ps1  pyproject.toml
src/: main.py  resources.py
src/image_converter/application/: types.py
src/image_converter/application/usecases/: convert_image.py
src/image_converter/presentation/: main_window.py  path.py
src/image_converter/presentation/cli/: convert_images.py  extension.py
src/image_converter/presentation/common/: dialog.py  scroll_label.py
src/image_converter/presentation/widgets/: convert_file.py
src/image_converter/presentation/widgets/combobox/: file_extension.py
